refactor: re-implement in terms of Camel DHIS2 component